# AI-Job-Aggregator

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_NOTES.md  README.md  alembic.ini  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml
alembic/: env.py
alembic/versions/: 892c91aaffe3_candidate_profiles_run_profile_limits.py  8dcd53ce4df0_add_scoring_tables.py  ed045dda9c96_init_schema.py
src/ai_job_aggregator/: __init__.py  cli.py  db.py  ingest.py  logging.py  rq.py  settings.py  worker.py
src/ai_job_aggregator/connectors/: base.py  remoteok.py
src/ai_job_aggregator/models/: __init__.py  candidate_profile.py  ingestion.py  job.py  scoring.py
src/ai_job_aggregator/schemas/: __init__.py  candidate_profile.py  job.py  scoring.py
src/ai_job_aggregator/scoring/: enqueue.py  heuristic.py  service.py  tasks.py
tests/: conftest.py  test_ingestion_service.py  test_remoteok_connector.py  test_rq_enqueue.py  test_scorer.py
